test/corpus/commands.txt
=================
Player Setup Flag
=================

<PLAYER_SETUP>
random_placement

---

(source_file
  (section_name)
  (command_name))

==============================
Player Setup Command With Args
==============================

<PLAYER_SETUP>
effect_amount SET_ATTRIBUTE MILITIA ATTR_ATTACK 2

---

(source_file
  (section_name)
  (command_name)
  (identifier)
  (identifier)
  (identifier)
  (integer))

==========================
Land Generation Standalone
==========================

<LAND_GENERATION>
base_terrain GRASS

---

(source_file
  (section_name)
  (identifier))

=====================
Land Generation Block
=====================

<LAND_GENERATION>
create_land {
  terrain_type GRASS
  base_size 10
}

---

(source_file
  (section_name)
  (command_name)
  (block
    (attribute_name)
    (identifier)
    (attribute_name)
    (integer)))

==========================
Elevation Generation Block
==========================

<ELEVATION_GENERATION>
create_elevation 7 {
  base_terrain GRASS
  number_of_tiles 100
}

---

(source_file
  (section_name)
  (command_name)
  (integer)
  (block
    (identifier)
    (attribute_name)
    (integer)))

========================
Cliff Generation Command
========================

<CLIFF_GENERATION>
min_number_of_cliffs 2

---

(source_file
  (section_name)
  (command_name)
  (integer))

========================
Terrain Generation Block
========================

<TERRAIN_GENERATION>
create_terrain GRASS {
  base_terrain DIRT
  number_of_clumps 10
}

---

(source_file
  (section_name)
  (command_name)
  (identifier)
  (block
    (identifier)
    (attribute_name)
    (integer)))

===========================
Connection Generation Block
===========================

<CONNECTION_GENERATION>
create_connect_all_players_land {
  replace_terrain GRASS DIRT
}

---

(source_file
  (section_name)
  (command_name)
  (block
    (attribute_name)
    (identifier)
    (identifier)))

========================
Objects Generation Block
========================

<OBJECTS_GENERATION>
create_object GOLD {
  number_of_objects 4
  min_distance_to_players 10
}

---

(source_file
  (section_name)
  (command_name)
  (identifier)
  (block
    (attribute_name)
    (integer)
    (attribute_name)
    (integer)))

===========
Empty Block
===========

<LAND_GENERATION>
create_land {
}

---

(source_file
  (section_name)
  (command_name)
  (block))

============================
Multiple Commands In Section
============================

<LAND_GENERATION>
base_terrain GRASS
base_layer DIRT
enable_waves 1

---

(source_file
  (section_name)
  (identifier)
  (identifier)
  (command_name)
  (integer))

====================
Command With Rnd Arg
====================

<LAND_GENERATION>
create_land {
  land_percent rnd(10,20)
}

---

(source_file
  (section_name)
  (command_name)
  (block
    (attribute_name)
    (integer)
    (integer)))

============================
Command With Math Expression
============================

<LAND_GENERATION>
create_land {
  number_of_tiles (64 * MAPSCALE_SIDE)
}

---

(source_file
  (section_name)
  (command_name)
  (block
    (attribute_name)
    (integer)
    (operator)
    (identifier)))

=========================
Empty Block No Whitespace
=========================

<LAND_GENERATION>
create_land {}

---

(source_file
  (section_name)
  (command_name)
  (block))
