test/corpus/comments.txt
=============
Basic Comment
=============

/* a comment */

---

(source_file
  (comment))

=============
Empty Comment
=============

/**/

---

(source_file
  (identifier))

====================
Almost Empty Comment
====================

/***/

---

(source_file
  (identifier))

====================
Single Space Comment
====================

/* */

---

(source_file
  (comment))

=============================
Single Level Single Character
=============================

/* a */

---

(source_file
  (comment))


=================
Multiline Comment
=================

/* a comment
   spanning
   multiple lines */

---

(source_file
  (comment))


====================
Comment After Define
====================

#define FOO /* a comment */

---

(source_file
  (identifier)
  (comment))

=====================
Comment Before Define
=====================

/* a comment */ #define FOO

---

(source_file
  (comment)
  (identifier))

=================
Multiple Comments
=================

/* first */
/* second */
/* third */

---

(source_file
  (comment)
  (comment)
  (comment))

======================
Comment Inside Section
======================

<LAND_GENERATION>

/* a comment */

---

(source_file
  (section_name)
  (comment))

===================
Star Inside Comment
===================

/* * */

---

(source_file
  (comment))

==========================
Double Star Inside Comment
==========================

/* ** */

---

(source_file
  (comment))

==========================
Triple Star Inside Comment
==========================

/* *** */

---

(source_file
  (comment))

==============
Comment to EoF
==============

/* This comment is not closed

---

(source_file
  (comment))

=========================
Comment Immediately Ended
=========================

/*

---

(source_file
  (comment))

==============================
No Whitespace to Start Comment
==============================

#const/* Comment doesn't start */

---

(source_file
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier))

====================================
Comment Delimiters Within Identifier
====================================

this/*isnota*/comment

---

(source_file
  (identifier))

==============
Nested Comment
==============

A /* B /* C */ D */ E

---

(source_file
  (identifier)
  (comment)
  (identifier))

==================
Nested Comment EoF
==================

/* This /* Comment /* Runs */ to /* EoF

---

(source_file
  (comment))

===============================
Whitespace Required For Nesting
===============================

/* A /*B */ C

---

(source_file
  (comment)
  (identifier))
