test/corpus/control-flow.txt
=========
Basic If
=========

#define ZAR
if ZAR
  #define DOZ
endif

---

(source_file
  (identifier)
  (keyword_control)
  (identifier)
  (identifier)
  (keyword_control))

=======
If Else
=======

#define FOO
if FOO
  #define BAR
else
  #define BAZ
endif

---

(source_file
  (identifier)
  (keyword_control)
  (identifier)
  (identifier)
  (keyword_control)
  (identifier)
  (keyword_control))

=========
If Elseif
=========

#define FOO
if FOO
  #define BAR
elseif BAZ
  #define ZAR
endif

---

(source_file
  (identifier)
  (keyword_control)
  (identifier)
  (identifier)
  (keyword_control)
  (identifier)
  (identifier)
  (keyword_control))

==============
If Elseif Else
==============

#define FOO
if FOO
  #define BAR
elseif BAZ
  #define ZAR
else
  #define DOZ
endif

---

(source_file
  (identifier)
  (keyword_control)
  (identifier)
  (identifier)
  (keyword_control)
  (identifier)
  (identifier)
  (keyword_control)
  (identifier)
  (keyword_control))

=========
Nested If
=========

if FOO
  if BAR
    #define BAZ
  endif
endif

---

(source_file
  (keyword_control)
  (identifier)
  (keyword_control)
  (identifier)
  (identifier)
  (keyword_control)
  (keyword_control))

=================
If Inside Section
=================

<LAND_GENERATION>
if FOO
  base_terrain GRASS
endif

---

(source_file
  (section_name)
  (keyword_control)
  (identifier)
  (identifier)
  (keyword_control))

=======================
If Inside Command Block
=======================

<LAND_GENERATION>
create_land {
  if FOO
    terrain_type GRASS
  endif
}

---

(source_file
  (section_name)
  (command_name)
  (block
    (keyword_control)
    (identifier)
    (attribute_name)
    (identifier)
    (keyword_control)))

==================
Basic Start Random
==================

start_random
  percent_chance 100 #define ZARDOZ
end_random

---

(source_file
  (keyword_control)
  (keyword_control)
  (integer)
  (identifier)
  (keyword_control))

==========================
Start Random Multiple Arms
==========================

start_random
  percent_chance 50 #define ZAR
  percent_chance 50 #define DAZ
end_random

---

(source_file
  (keyword_control)
  (keyword_control)
  (integer)
  (identifier)
  (keyword_control)
  (integer)
  (identifier)
  (keyword_control))

===========================
Start Random Inside Section
===========================

<LAND_GENERATION>
start_random
  percent_chance 100
    base_terrain GRASS
end_random

---

(source_file
  (section_name)
  (keyword_control)
  (keyword_control)
  (integer)
  (identifier)
  (keyword_control))

=================================
Start Random Inside Command Block
=================================

<LAND_GENERATION>
create_land {
  start_random
    percent_chance 100 terrain_type GRASS
  end_random
}

---

(source_file
  (section_name)
  (command_name)
  (block
    (keyword_control)
    (keyword_control)
    (integer)
    (attribute_name)
    (identifier)
    (keyword_control)))

======================
If Inside Start Random
======================

start_random
  percent_chance 100
    if ZAR
      #define DAZ
    endif
end_random

---

(source_file
  (keyword_control)
  (keyword_control)
  (integer)
  (keyword_control)
  (identifier)
  (identifier)
  (keyword_control)
  (keyword_control))

======================
Start Random Inside If
======================

if ZAR
  start_random
    percent_chance 100 #define DAZ
  end_random
endif

---

(source_file
  (keyword_control)
  (identifier)
  (keyword_control)
  (keyword_control)
  (integer)
  (identifier)
  (keyword_control)
  (keyword_control))
