test/corpus/global.txt
======================
Single Character Label
======================

#define A

---

(source_file
  (identifier))

=====================
Multi-Character Label
=====================

#define TEST_LABEL

---

(source_file
  (identifier))

===============
Multiple Labels
===============

#define A
#define B
#define C
#define D #define E #define F

---

(source_file
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier))

================================
Define Label With Leading Digits
================================

#define 123ABC

---

(source_file
  (identifier))

======================
Single Character Const
======================
#const A 1
---
(source_file
  (identifier)
  (integer))

============================
Const Statement With Integer
============================

#const MUD 76

---

(source_file
  (identifier)
  (integer))

===============================
Const Statement With Identifier
===============================

#const HERDABLE_A SHEEP

---

(source_file
  (identifier)
  (identifier))

==========================
Const Statement With Float
==========================

#const PI 3.14

---

(source_file
  (identifier)
  (float))

=========================
Const Statement With Math
=========================

#const TOTAL (1 + 2.3 * ARCHER + 4)

---

(source_file
  (identifier)
  (integer)
  (operator)
  (float)
  (operator)
  (identifier)
  (operator)
  (integer))
