test/corpus/math-expressions.txt
========
Addition
========

#const RESULT (1 + 2)

---

(source_file
  (identifier)
  (integer)
  (operator)
  (integer))

===========
Subtraction
===========

#const RESULT (1 - 2)

---

(source_file
  (identifier)
  (integer)
  (operator)
  (integer))

==============
Multiplication
==============

#const RESULT (1 * 2)

---

(source_file
  (identifier)
  (integer)
  (operator)
  (integer))

========
Division
========

#const RESULT (1 / 2)

---

(source_file
  (identifier)
  (integer)
  (operator)
  (integer))

=========
Remainder
=========

#const RESULT (1 % 2)

---

(source_file
  (identifier)
  (integer)
  (operator)
  (integer))

==============
Single Operand
==============

#const RESULT (42)

---

(source_file
  (identifier)
  (integer))

==============
Float Operands
==============

#const RESULT (1.5 + 2.5)

---

(source_file
  (identifier)
  (float)
  (operator)
  (float))

===================
Identifier Operands
===================

#const RESULT (ZAR + DOZ)

---

(source_file
  (identifier)
  (identifier)
  (operator)
  (identifier))

==============
Mixed Operands
==============

#const RESULT (1 + 2.5 * FOO)

---

(source_file
  (identifier)
  (integer)
  (operator)
  (float)
  (operator)
  (identifier))

==================
Multiple Operators
==================

#const RESULT (1 + 2 - 3 * 4 / 5 % 6)

---

(source_file
  (identifier)
  (integer)
  (operator)
  (integer)
  (operator)
  (integer)
  (operator)
  (integer)
  (operator)
  (integer)
  (operator)
  (integer))

========================
Negative Integer Operand
========================

#const RESULT (-1 + 2)

---

(source_file
  (identifier)
  (integer)
  (operator)
  (integer))

======================
Negative Float Operand
======================

#const RESULT (-1.5 + 2.5)

---

(source_file
  (identifier)
  (float)
  (operator)
  (float))

==================================
Identifier Adjacent To Parentheses
==================================

#const RESULT (ZAR + 1 + DOZ)

---

(source_file
  (identifier)
  (identifier)
  (operator)
  (integer)
  (operator)
  (identifier))
