test/corpus/values.txt
============
Integer Zero
============

#const ZERO 0

---

(source_file
  (identifier)
  (integer))

================
Positive Integer
================

#const POSITIVE 42

---

(source_file
  (identifier)
  (integer))

================
Negative Integer
================

#const NEGATIVE -42

---

(source_file
  (identifier)
  (integer))

=========================
Explicit Positive Integer
=========================

#const POSITIVE +42

---

(source_file
  (identifier)
  (integer))

===========
Basic Float
===========

#const PI 3.14

---

(source_file
  (identifier)
  (float))

==============
Negative Float
==============

#const NEG -3.14

---

(source_file
  (identifier)
  (float))

=======================
Explicit Positive Float
=======================

#const POS +3.14

---

(source_file
  (identifier)
  (float))

=====================
Float No Leading Zero
=====================

#const SMALL .5

---

(source_file
  (identifier)
  (float))

========
Infinity
========

#const POS_INF inf

---

(source_file
  (identifier)
  (float))

=================
Negative Infinity
=================

#const NEG_INF -inf

---

(source_file
  (identifier)
  (float))

==========================
Explicit Positive Infinity
==========================

#const POS_INF +inf

---

(source_file
  (identifier)
  (float))

=========
Basic rnd
=========

#const RANDOM_ANGLE rnd(0,359)

---

(source_file
  (identifier)
  (integer)
  (integer))


========================
Rnd With Negative Bounds
========================

#const RANDOM rnd(-10,-1)

---

(source_file
  (identifier)
  (integer)
  (integer))

===================
Identifier Argument
===================

#const HERDABLE SHEEP

---

(source_file
  (identifier)
  (identifier))
